2015-10-12  Jon Lee  <jonlee@apple.com>

        Remove "../tests/" from the URLs of all tests
        https://bugs.webkit.org/show_bug.cgi?id=150054
        <rdar://problem/23078784>

        Reviewed by Dean Jackson.

        Presumably all tests will be running from the tests/ directory,
        so we don't have to specify it in all of the test URLs.

        * Animometer/runner/resources/benchmark-runner.js:
        (BenchmarkRunnerState.prototype.prepareCurrentTest): Prepend
        "../tests/" to all tests.
        * Animometer/runner/resources/tests.js: Remove "../tests/" from
        all URLs.

2015-10-12  Jon Lee  <jonlee@apple.com>

        Refactor test suites to a separate class.
        https://bugs.webkit.org/show_bug.cgi?id=150053
        <rdar://problem/23078645>

        Reviewed by Dean Jackson.

        Create a Suite class to refactor out prepare() and run().
        Generate the checkboxes representing the suites using Suites
        instead of maintaining a separate list. Also, save the
        selections out to localStorage.

        * Animometer/runner/animometer.html: Remove the explicitly listed
        suites. These will be generated from Suites instead.
        * Animometer/runner/resources/animometer.js:
        (populateSettings): Iterate through Suites, and create the
        label and checkbox. Attach the Suite object to the checkbox so
        when the benchmark is started, we get direct access. Initialize
        the checkmark based on its value in localStorage. Set this to
        run when DOMContentLoaded is dispatched.
        (startBenchmark): Grab all of the checkboxes, inspect their
        values, add it to enabledSuites if selected. Remember whether
        the suite was enabled in localStorage, so that it's easy to do
        repeated runs.
        * Animometer/runner/resources/tests.js:
        (Suite): Create a new Suite class. Refactor out prepare() and