@@ -1,5 +1,17 @@
 2015-10-12  Jon Lee  <jonlee@apple.com>
 
+        Store test-interval in localStorage
+        https://bugs.webkit.org/show_bug.cgi?id=150055
+        <rdar://problem/23078879>
+
+        Reviewed by Dean Jackson.
+
+        * Animometer/runner/resources/animometer.js:
+        (populateSettings): Keep track of the specified test interval in localStorage
+        to make it easy to repeat a test suite.
+
+2015-10-12  Jon Lee  <jonlee@apple.com>
+
         Remove "../tests/" from the URLs of all tests
         https://bugs.webkit.org/show_bug.cgi?id=150054
         <rdar://problem/23078784>
